var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
/**
 * @project     OTRS (http://www.otrs.org) - Agent Frontend
 * @version     $Revision: 1.13 $
 * @copyright   OTRS AG
 * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
 */

/**
 * @package     Skin "Default"
 * @section     Default Settings
 */

@media screen,projection,tv,handheld {

/**
 * @subsection ArticleList Expanding
 */

.FAQ .OverviewControl div {
    padding: 0px;
}

.FAQ #OverviewBody {
    margin: 0 0 8px 0;
}

/**
 * @subsection Large SidebarColumn
 */

.LayoutFixedSidebar.SidebarLast > .SidebarColumn.Large {
    width: 350px;
    float: right;
    margin-left: 16px;
    margin-right: 0;
}

.LayoutFixedSidebar.SidebarLast > .SidebarColumn.Medium {
    width: 290px;
    float: right;
    margin-left: 16px;
    margin-right: 0;
}

/**
 * @subsection FAQMiniList
 */

ul.FAQMiniList span {
    display: block;
    font-size: 10px;
}


/**
 * @subsection Category path
 */

.FAQPathCategory {
    margin-bottom: 13px !important;
    height: auto;
    min-height: 25px;
    margin: 0 -1px;
    background: #A7AAAA url("../img/GradientSmall.png") repeat-x 0 0;
    position: relative;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    overflow: hidden;
}

.FAQPathCategory h3 {
    font-weight: bold;
    font-size: 12px;
    padding-left: 5px;
    padding-top: 7px;
}

iframe.TextOption.FAQ {
    width: 1024px;
    min-height: 700px;
}

iframe.FAQField {
    width: 100%;
    frameborder: 0;
}
}

